--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "assert": "^1.1.1",
     "axios": "^0.27.2",
     "base-64": "^1.0.0",
+    "bluebird": "^3.7.2",
     "bootstrap": "^5.2.3",
     "browserify-zlib": "~0.1.4",
     "buffer": "^6.0.3",
@@ -67,6 +68,7 @@
     "expo-file-system": "~13.1.4",
     "expo-font": "~10.0.4",
     "expo-intent-launcher": "~10.1.3",
+    "expo-jwt": "^1.4.1",
     "expo-linear-gradient": "~11.0.3",
     "expo-media-library": "~14.0.0",
     "expo-notifications": "~0.14.0",
@@ -77,6 +79,8 @@
     "g": "^2.0.1",
     "https-browserify": "~0.0.0",
     "jsbi": "^3.2.5",
+    "jsonwebtoken": "^9.0.0",
+    "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "metro": "^0.71.3",
     "native": "^0.3.3",
