--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@parse/react-native": "^0.0.1-alpha.18",
     "@react-native-anywhere/anywhere": "^0.0.1-alpha.4",
     "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-community/art": "github:react-native-community/art",
     "@react-native-community/cli-platform-ios": "^9.3.0",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/material-bottom-tabs": "^6.2.1",
