--- a/package.json
+++ b/package.json
@@ -101,10 +101,11 @@
     "react-native-dialog": "^9.2.2",
     "react-native-dialog-input": "^1.0.8",
     "react-native-element-dropdown": "^2.1.0",
-    "react-native-gesture-handler": "^1.10.3",
+    "react-native-gesture-handler": "~2.1.0",
     "react-native-get-random-values": "~1.7.0",
     "react-native-image-avatars": "^1.1.6",
     "react-native-image-base64": "^0.1.4",
+    "react-native-image-slider-box": "^2.0.7",
     "react-native-level-fs": "^3.0.0",
     "react-native-linear-gradient": "^2.6.0",
     "react-native-modal": "^12.1.0",
@@ -123,21 +124,21 @@
     "react-native-push-notification": "^8.1.1",
     "react-native-qrcode-svg": "^6.1.2",
     "react-native-randombytes": "^3.6.1",
-    "react-native-reanimated": "^1.13.4",
+    "react-native-reanimated": "~2.3.1",
     "react-native-responsive-linechart": "^5.7.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-router-flux": "^4.3.1",
-    "react-native-safe-area-context": "^3.3.2",
+    "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-snackbar": "^2.4.0",
     "react-native-snackbar-component": "^1.1.12",
-    "react-native-svg": "^12.4.3",
+    "react-native-svg": "12.1.1",
     "react-native-svg-charts": "^5.4.0",
     "react-native-swipe-gestures": "^1.0.5",
     "react-native-tab-view": "^3.3.4",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "0.17.1",
-    "react-native-webview": "^8.0.0",
+    "react-native-webview": "11.15.0",
     "react-navigation": "^4.4.4",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.8.1",
