--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@react-native-firebase/messaging": "^17.4.2",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/material-bottom-tabs": "^6.2.1",
+    "@react-navigation/material-top-tabs": "^6.6.2",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "@react-navigation/stack": "^6.2.2",
@@ -135,7 +136,7 @@
     "react-native-svg": "12.1.1",
     "react-native-svg-charts": "^5.4.0",
     "react-native-swipe-gestures": "^1.0.5",
-    "react-native-tab-view": "^3.3.4",
+    "react-native-tab-view": "^3.5.1",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "0.17.1",
     "react-native-webview": "11.15.0",
