--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "simpleapp",
-    "slug": "simpleapp",
+    "name": "katchwallet",
+    "slug": "katchwallet",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
