--- a/app.json
+++ b/app.json
@@ -34,9 +34,9 @@
     },
     "extra": {
       "eas": {
-        "projectId": "7d8be2ca-47c1-48e4-afb4-14cc2fea504d"
+        "projectId": "888c7e00-7e91-4150-ad77-aae9b5ab2ab3"
       }
     },
-    "owner": "katchintech"
+    "owner": "swiftex"
   }
 }
