--- a/package.json
+++ b/package.json
@@ -153,6 +153,7 @@
     "text-encoding": "^0.7.0",
     "text-encoding-polyfill": "^0.6.7",
     "timers-browserify": "^1.0.1",
+    "toggle-switch-react-native": "^3.3.0",
     "url": "~0.10.1",
     "util": "~0.10.3",
     "validator": "^13.7.0",
