--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "@react-navigation/stack": "^6.2.2",
+    "@swc/helpers": "^0.5.1",
     "@tradle/react-native-http": "^2.0.0",
     "@uniswap/sdk": "^3.0.3",
     "@uniswap/sdk-core": "^3.1.0",
