new feature added

--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "react-native-axios": "^0.17.1",
     "react-native-biometrics": "^3.0.1",
     "react-native-bootstrap-styles": "^4.5.0-r",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-crypto": "^2.2.0",
     "react-native-crypto-js": "^1.0.0",
     "react-native-dialog": "^9.2.2",
@@ -150,7 +151,9 @@
     "redux-thunk": "^2.4.1",
     "ripple-lib": "^1.10.1",
     "simple-uniswap-sdk": "^3.7.0",
+    "stellar-sdk": "^0.14.0",
     "stream-browserify": "^1.0.0",
+    "stripe": "^14.13.0",
     "text-encoding": "^0.7.0",
     "text-encoding-polyfill": "^0.6.7",
     "timers-browserify": "^1.0.1",
