--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "react-native-get-random-values": "~1.7.0",
     "react-native-image-avatars": "^1.1.6",
     "react-native-image-base64": "^0.1.4",
+    "react-native-image-picker": "^7.1.2",
     "react-native-image-slider-box": "^1.1.24",
     "react-native-level-fs": "^3.0.0",
     "react-native-modal": "^12.1.0",
