--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "react-native-axios": "^0.17.1",
     "react-native-biometrics": "^3.0.1",
     "react-native-bootstrap-styles": "^4.5.0-r",
+    "react-native-camera": "^4.2.1",
     "react-native-chart-kit": "^6.12.0",
     "react-native-crypto": "^2.2.0",
     "react-native-crypto-js": "^1.0.0",
