--- a/ios/simpleapp/Info.plist
+++ b/ios/simpleapp/Info.plist
@@ -28,6 +28,8 @@
 	<true/>
 	<key>NSCameraUsageDescription</key>
 <string>We need access to your camera to scan QR Code.</string>
+<key>NSFaceIDUsageDescription</key>
+<string>We need access to Face ID for SwiftEx authentication.</string>
 <key>NSMicrophoneUsageDescription</key>
 <string>We need access to your microphone to scan QR Code.</string>
 	<key>NSAppTransportSecurity</key>
